--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "use-abortable-fetch": "^2.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
