--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-overdrive": "0.0.10",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "styled-components": "^5.0.0",
     "use-abortable-fetch": "^2.6.6"
