--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.0.0",
     "use-abortable-fetch": "^2.6.6"
   },
